Tue May 26 11:59:08 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: allow --verbose-asm
	  too.

Tue May 26 11:50:11 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Options.java: --verbose-asm ->
	  -fverbose-asm

Sun May 24 22:44:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  reorder methods.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  inlining #testCond.

Sun May 24 21:57:04 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: do not use
	  Expr#isConstantAddress, it confuses semantics.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: ditto.

	* net/loveruby/cflat/ir/Expr.java: introduce new methods #isVar
	  and #isAddr, instead of #isConstantAddress.

	* net/loveruby/cflat/ir/Addr.java: override #isAddr.

	* net/loveruby/cflat/ir/Var.java: override #isVar.

Sun May 24 21:54:57 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast: remove useless methods:
	  ExprNode#isConstantAddress.

Sun May 24 20:24:01 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (Dereference): do
	  not generate Mem for unloadable object (implicit address
	  generation handling).

	* net/loveruby/cflat/ast: dump #type for LHS nodes.

	* net/loveruby/cflat/ast/AddressNode.java: do not inherit
	  UnaryOpNode.

Sun May 24 19:23:28 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: now 3 pathes
	  (define, resolve entities, resolve expr) are not required; just
	  use old 2 pathes (define, resolve).  Old TypeResolver fixed a type
	  of AddressNode, it requires 3 path.  But current implementation
	  fixes a type of AddressNode in DereferenceChecker, we do not need
	  3 path.

	* net/loveruby/cflat/ast/AST.java: #entities -> #definitions.

	* net/loveruby/cflat/ast/AST.java: new method #entities, it