@@ -2,7 +2,23 @@ package net.loveruby.cflat.compiler;
 import java.io.File;
 
 class SourceFile implements LdArg {
-    private String originalName;
+    static final String EXT_CFLAT_SOURCE = ".cb";
+    static final String EXT_ASSEMBLY_SOURCE = ".s";
+    static final String EXT_OBJECT_FILE = ".o";
+    static final String EXT_STATIC_LIBRARY = ".a";
+    static final String EXT_SHARED_LIBRARY = ".so";
+    static final String EXT_EXECUTABLE_FILE = "";
+
+    static final String[] KNOWN_EXTENSIONS = {
+      EXT_CFLAT_SOURCE,
+      EXT_ASSEMBLY_SOURCE,
+      EXT_OBJECT_FILE,
+      EXT_STATIC_LIBRARY,
+      EXT_SHARED_LIBRARY,
+      EXT_EXECUTABLE_FILE
+    };
+
+    private final String originalName;
     private String currentName;
 
     SourceFile(String name) {
@@ -30,36 +46,44 @@ class SourceFile implements LdArg {
         this.currentName = name;
     }
 
+    boolean isKnownFileType() {
+        String ext = extName(originalName);
+        for (String e : KNOWN_EXTENSIONS) {
+            if (e.equals(ext)) return true;
+        }
+        return false;
+    }
+
     boolean isCflatSource() {
-        return extName(currentName).equals(".cb");
+        return extName(currentName).equals(EXT_CFLAT_SOURCE);
     }
 
     boolean isAssemblySource() {
-        return extName(currentName).equals(".s");
+        return extName(currentName).equals(EXT_ASSEMBLY_SOURCE);
     }
 
     boolean isObjectFile() {
-        return extName(currentName).equals(".o");
+        return extName(currentName).equals(EXT_OBJECT_FILE);
     }
 
     boolean isSharedLibrary() {
-        return extName(currentName).equals(".so");
+        return extName(currentName).equals(EXT_SHARED_LIBRARY);
     }
 
     boolean isStaticLibrary() {
-        return extName(currentName).equals(".a");
+        return extName(currentName).equals(EXT_STATIC_LIBRARY);
     }
 
     boolean isExecutable() {
-        return extName(currentName).equals("");
+        return extName(currentName).equals(EXT_EXECUTABLE_FILE);
     }
 
     String asmFileName() {
-        return replaceExt(".s");
+        return replaceExt(EXT_ASSEMBLY_SOURCE);
     }
 
     String objFileName() {
-        return replaceExt(".o");
+        return replaceExt(EXT_OBJECT_FILE);
     }
 
     String linkedFileName(String newExt) {
